--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div class="text-container">
         <div class="top-buttons">
           <button id="copy-button" onClick="main-input();">Copy</button>
+          <button id="denied" >Denied</button>
+          <button id="aidenied" >AI Denied</button>
           <button id="clear-button" onClick="window.location.reload();" >Clear</button>
         </div>
         <textarea readonly id="main-input"></textarea>
