update code and add img.

--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
-<html>
-  <head>
-    <title>PRP Application Amendments</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>PRP Application Amendments</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/prp.png" type="image/x-icon" />
+</head>
+<body>
+  <div class="container">
     <div class="button-container">
       <button id="bttn1">Rules</button>
+      <hr>
       <button id="bttn2">Provide Good RP</button>
-      <button style="background-color: #043742" id="bttn3">Understand Powergaming</button>
-      <button style="background-color: #043742" id="bttn4">Understand NVL</button>
+      <button class="special-btn" id="bttn3">Understand Powergaming</button>
+      <button class="special-btn" id="bttn4">Understand NVL</button>
       <button id="bttn5">Back Story | Fits Rules</button>
       <button id="bttn6">Back Story | Elaborate</button>
       <button id="bttn7">Accomplish In City</button>
       <button id="bttn8">Left Burgershot</button>
       <button id="bttn9">Selling Illegal Car</button>
       <button id="bttn10">Prison Emote | Interactions</button>
-      <button style="background-color: #043742" id="bttn11">Prison Emote | Report To Staff</button>
+      <button class="special-btn" id="bttn11">Prison Emote | Report To Staff</button>
       <hr>
-       <button id="bttn12">Back Story | Both</button>
-       <button id="bttn13">Prison Escapte | Both</button>
+      <button id="bttn12">Back Story | Both</button>
+      <button id="bttn13">Prison Escape | Both</button>
     </div>
-      <div class="text-container">
-        <div class="top-buttons">
-          <button id="copy-button" onClick="main-input();">Copy</button>
-          <button id="denied" >Denied (auto copy) </button>
-          <button id="aidenied" >AI Denied (auto copy) </button>
-          <button id="clear-button" onClick="window.location.reload();" >Clear</button>
-        </div>
-        <textarea readonly id="main-input"></textarea>
+    <div class="text-container">
+      <div class="top-buttons">
+        <button id="copy-button" onclick="mainInput()">Copy</button>
+        <button id="denied">Denied (auto copy)</button>
+        <button id="aidenied">AI Denied (auto copy)</button>
+        <button id="clear-button" onclick="window.location.reload()">Clear</button>
       </div>
+      <textarea readonly id="main-input"></textarea>
     </div>
-    <script src="script.js"></script>
-  </body>
+    <footer>
+      asdasd
+    </footer>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
