--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <textarea readonly id="main-input"></textarea>
     </div>
     <footer>
-      asdasd
+      Created by XavierMee :P
     </footer>
   </div>
   <script src="script.js"></script>
