Update PRP Support Staff Help
Updated styling
Added Mobile Styling
Updated JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>PRP Application Amendments</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/prp.png" type="image/x-icon" />
+  <link rel="icon" href="img/prp.png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
@@ -28,10 +28,10 @@
     </div>
     <div class="text-container">
       <div class="top-buttons">
-        <button id="copy-button" onclick="mainInput()">Copy</button>
-        <button id="denied">Denied (auto copy)</button>
-        <button id="aidenied">AI Denied (auto copy)</button>
-        <button id="clear-button" onclick="window.location.reload()">Clear</button>
+        <button id="copy-button">Copy</button>
+        <button id="denied">Denied</button>
+        <button id="aidenied">AI Denied</button>
+        <button id="clear-button">Clear</button>
       </div>
       <textarea readonly id="main-input"></textarea>
     </div>
